--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,20 +1,182 @@
+/* font imported */
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@200;300;400;500;600;700;800&display=swap");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+
+@layer base {
+  body {
+    @apply bg-[#ececec] -tracking-wide;
+  }
+
+  h2 {
+    @apply text-base font-medium md:text-3xl mt-[10%];
+  }
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+@layer components {
+  .header {
+    @apply flex py-5 text-sm md:text-base;
+  }
+  .btn {
+    @apply w-fit py-1 px-4 rounded-full border border-neutral-900 hover:bg-black hover:text-[#ececec];
+  }
+  .section {
+    @apply my-8 md:my-20;
+  }
+  .main-part {
+    @apply max-w-[90%] md:max-w-screen-md mx-auto;
+  }
+  img {
+    @apply w-full;
+  }
+  .icon {
+    @apply w-[25px] transition-transform ease-linear duration-[0.2s] hover:scale-110;
+  }
+  .logo {
+    @apply font-bold;
+  }
+  .logo--thin {
+    @apply font-normal;
+  }
+  .header-nav {
+    @apply hidden ml-auto md:block;
+  }
+  .header-nav__list {
+    @apply flex flex-wrap items-center space-x-4 font-semibold md:ml-auto;
+  }
+  .up-arrow {
+    @apply fixed right-2 w-[30px] bottom-2;
+  }
+  .hero {
+    @apply h-[50vh] md:h-[70vh] flex flex-col relative;
+  }
+  .hero__text--cta {
+    @apply text-3xl mt-3 sm:text-4xl md:text-6xl font-semibold leading-7 md:leading-[0.9] md:w-10/12 w-3/4 -tracking-wider;
+  }
+  .hero__text {
+    @apply text-xl md:text-2xl;
+  }
+  .hero__link {
+    @apply absolute right-0 text-sm bottom-5;
+  }
+  .hero__link-arrow {
+    @apply text-[10px];
+  }
+  .work {
+    @apply w-full;
+  }
+  .work__img {
+    @apply object-cover w-full h-60 hover:object-fill;
+  }
+  .work__article {
+    @apply grid grid-cols-3 gap-4;
+  }
+  .work__subtitle {
+    @apply mt-2 text-base;
+  }
+  .work__title {
+    @apply text-3xl font-medium md:text-5xl -tracking-wider;
+  }
+  .work__description {
+    @apply mt-2 mb-6 text-xl leading-5 md:text-3xl -tracking-wider max-w-[80%] md:max-w-lg;
+  }
+  .work__cta {
+    @apply underline hover:font-medium;
+  }
+  .work__content {
+    @apply col-span-2;
+  }
+
+  .work__second-img {
+    @apply hidden -mt-40 md:inline w-36 justify-self-center;
+  }
+
+  .contact {
+    @apply grid grid-cols-1 md:grid-cols-2;
+  }
+  .contact__img {
+    @apply flex flex-col items-center justify-center p-5;
+  }
+  .connect {
+    @apply flex flex-col items-center justify-center space-y-4 h-fit;
+  }
+  .connect__text {
+    @apply text-3xl font-bold md:text-5xl -tracking-wider;
+  }
+  .connect__text--thin {
+    @apply text-3xl font-light md:text-5xl -tracking-wider;
+  }
+  .connect__arrow {
+    @apply w-5 md:w-8;
+  }
+  .form {
+    @apply flex flex-col justify-center order-first p-10 space-y-10 border border-gray-300 md:order-2;
+  }
+  .form__title {
+    @apply text-black font-light text-2xl w-[90%];
+  }
+  .form__input-list {
+    @apply flex flex-col space-y-4;
+  }
+  .form__input {
+    @apply border-b border-solid border-[#424242] bg-inherit pb-1 w-full;
+  }
+  .form__input--message {
+    @apply h-[60px];
+  }
+
+  .footer {
+    @apply flex flex-col w-full p-10 space-y-10 text-white bg-black;
+  }
+  .footer-nav {
+    @apply w-[90%] md:max-w-screen-md mx-auto;
+  }
+  .footer-list {
+    @apply flex flex-col items-center justify-center space-y-4 md:flex-row md:items-start md:space-y-0;
+  }
+  .footer-list__item {
+    @apply flex flex-col items-center md:items-start;
+  }
+  .footer-list__item--center {
+    @apply md:ml-5;
+  }
+  .footer-list__title {
+    @apply text-[#C4C4C4] text-sm;
+  }
+  .footer__list-icons {
+    @apply flex flex-row space-x-2;
+  }
+  .signature {
+    @apply flex items-center justify-center text-xs font-thin text-white;
+  }
+  .signature__icon {
+    @apply px-1 w-[30px];
+  }
+  .signature__name {
+    @apply ml-1 font-medium;
+  }
 }
+
+/* Additional Styles */
 
 * {
-  box-sizing: border-box;
+    scroll-behavior: smooth;
+}
+
+.heart {
+  animation: alive 2s infinite ease;
+}
+@keyframes alive {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.3);
+  }
+  100% {
+    transform: scale(1);
+  }
 }
