[HOTFIX] mobile hamburger menu changed to plain css

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -137,3 +137,113 @@ transform: translateX(-50%);
 
 }
 
+/* Menu Icon */
+ /* Menu Button 1 */
+ .menu-btn-1 {
+  height: 32px;
+  width: 40px;
+  cursor: pointer;
+}
+  /**
+  
+  .gradient-background {
+  height: 600px;
+   background: linear-gradient(62deg, #EE7752, #E73C7E, #23A6D5, #23D5AB);
+     animation: gradient 15s ease infinite; 
+      background-size: 400% 400%;
+  
+}
+@-webkit-keyframes gradient{
+  0% {
+    background-position: 0 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+     background-position: 0% 50%;
+  }
+}
+@keyframes gradient{
+  0% {
+    background-position: 0 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+     background-position: 0% 50%;
+  }
+}
+  **/
+  .menu-btn-1 span,
+  .menu-btn-1 span::before,
+  .menu-btn-1 span::after {
+      background: linear-gradient(62deg, #EE7752, #E73C7E, #23A6D5, #23D5AB);
+      animation: gradient 15s ease infinite; 
+       background-size: 400% 400%;
+      content: '';
+      position: absolute;
+      width: 30px;
+      height: 2px;         
+      margin-top: 13px; 
+
+      -webkit-transition: .3s ease-in-out;
+      -moz-transition: .3s ease-in-out;
+      -o-transition: .3s ease-in-out;
+      transition: .3s ease-in-out;
+  }
+
+  @-webkit-keyframes gradient{
+    0% {
+      background-position: 0 50%;
+    }
+    50% {
+      background-position: 100% 50%;
+    }
+    100% {
+       background-position: 0% 50%;
+    }
+  }
+  @keyframes gradient{
+    0% {
+      background-position: 0 50%;
+    }
+    50% {
+      background-position: 100% 50%;
+    }
+    100% {
+       background-position: 0% 50%;
+    }
+  }
+  .menu-btn-1 span::before {
+      margin-top:-8px;
+  }
+
+  .menu-btn-1 span::after {
+      margin-top:8px;
+  }
+
+  .menu-btn-1.active span {
+      background: transparent;
+  }
+
+  .menu-btn-1.active span::before {
+      margin-top: 0;
+      background: rgb(2,0,36);
+background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(121,37,9,1) 35%, rgba(255,0,0,1) 100%);
+      -webkit-transform: rotate(45deg);
+      -moz-transform: rotate(45deg);
+      -o-transform: rotate(45deg);
+      transform: rotate(45deg);
+  }
+
+  .menu-btn-1.active span::after {
+      margin-top: 0;
+      background: rgb(2,0,36);
+      background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(121,37,9,1) 35%, rgba(255,0,0,1) 100%);
+      -webkit-transform: rotate(-45deg);
+      -moz-transform: rotate(-45deg);
+      -o-transform: rotate(-45deg);
+      transform: rotate(-45deg);
+  }
