--- a/styles/globals.css
+++ b/styles/globals.css
@@ -176,6 +176,9 @@ body {
 .menu-btn-1 span::before,
 .menu-btn-1 span::after {
   background: linear-gradient(62deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+  -webkit-animation: gradient 15s ease infinite;
+  -moz-animation: gradient 15s ease infinite;
+  -o-animation: gradient 15s ease infinite;
   animation: gradient 15s ease infinite;
   background-size: 400% 400%;
   content: '';
